crates/rome_cli/tests/snapshots/main::reporter_json/reports_formatter_check_mode.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 146
expression: content
---
## `format.js`

```js
  statement(  )  
```

# Emitted Messages

```block
{"formatter":{"summary":{"filesCompared":1,"filesWritten":null},"files":{"format.js":{"formattedContent":"statement();\n"}}},"diagnostics":{"format.js":{"diff":{"severity":"Error","before":"  statement(  )  ","after":"statement();\n"}}}}
```


