crates/rome_cli/tests/snapshots/main::reporter_json/reports_formatter_write.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 146
expression: content
---
## `format.js`

```js
statement();

```

# Emitted Messages

```block
{"formatter":{"summary":{"filesCompared":null,"filesWritten":1},"files":{}},"diagnostics":{}}
```


